meja/tests/wrong_num_args_decl-fail.stderr
File "tests/wrong_num_args_decl-fail.meja", line 1, characters 29-38:
Error: The type constructor t expects 1 argument(s)
       but is here applied to 2 argument(s).
